Some UI fixes (#17)
* horizontal scroll removed (overflow hidden added to section with glow circles)

* added side paddings on greetings section to prevent side sticky text, also fixed header size on mobile devices

--- a/src/screens/home/GreetingSection/GreetingSection.module.scss
+++ b/src/screens/home/GreetingSection/GreetingSection.module.scss
@@ -9,6 +9,7 @@
 }
 
 .container {
+  @include side-paddings;
   height: 800px;
   max-width: 1000px;
   margin: 0 auto;
@@ -25,7 +26,7 @@
 }
 
 .content {
-  @include heading3;
+  @include heading4;
 
   text-align: center;
 
@@ -39,6 +40,10 @@
 
   .description {
     @include body-m;
+  }
+
+  @include tablet-portrait {
+    @include heading3;
   }
 
   @include tablet-landscape {
