--- a/src/screens/home/RingfenceEcosystemProjectsSection/RingfenceEcosystemProjectsSection.module.scss
+++ b/src/screens/home/RingfenceEcosystemProjectsSection/RingfenceEcosystemProjectsSection.module.scss
@@ -4,7 +4,7 @@
 
 .root {
   @include side-paddings;
-
+  overflow: hidden;
   position: relative;
 
   padding-top: 64px;
